--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
-    "@rainbow-me/rainbowkit": "^2.1.5",
-    "@tanstack/react-query": "^5.51.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.435.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@rainbow-me/rainbowkit": "^2.1.5",
+    "@tanstack/react-query": "^5.51.11",
+    "axios": "^1.7.5",
+    "fs": "^0.0.1-security",
+    "maci-crypto": "1.1.1",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "viem": "2.17.0",
-    "wagmi": "^2.12.0"
+    "wagmi": "^2.12.0",
+    "zeto-js": "file:./src/pages/api/zkp/js"
   },
   "devDependencies": {
     "@types/node": "^18.19.3",
